--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="main-content">{{>header}}
+      <p>This site was created by Sujith S A. It uses data from mapbox.com and darksky.net!</p>
     <img class="portrait" src="/img/robot.png" /></div>
    
     {{>footer}}
